--- a/assets/stylesheets/desktop.css
+++ b/assets/stylesheets/desktop.css
@@ -134,7 +134,8 @@
       > div {
         &:nth-of-type(1) {
           width: 347px;
-          height: 640px;
+          /* height: 640px; */
+          padding-bottom: 250px;
           position: absolute;
           z-index: 2;
           left: 0;
@@ -142,7 +143,8 @@
         }
         &:nth-of-type(2) {
           width: 376px;
-          height: 517px;
+          /* height: 517px; */
+          padding-bottom: 50px;
           position: absolute;
           z-index: 2;
           right: 0;
