--- a/assets/stylesheets/master.css
+++ b/assets/stylesheets/master.css
@@ -851,7 +851,7 @@ main {
     > div {
       /*----------------- our shop ------------------*/
       &:nth-of-type(1) {
-        height: 510px;
+        /* height: 510px; */
         background-color: #f7f7f7;
         border-radius: 25px;
         padding: 25px;
@@ -888,7 +888,7 @@ main {
       /*----------------- news letter ------------------*/
       &:nth-of-type(2) {
         margin-top: 20px;
-        height: 510px;
+        /* height: 510px; */
         background-color: #f7f7f7;
         border-radius: 25px;
         padding: 25px;
@@ -943,7 +943,8 @@ main {
 }
 footer {
   width: 97%;
-  height: 400px;
+  /* height: 400px; */
+  padding: 100px 0;
   background-image: url(../images/banner-bg.jpg);
   background-size: cover;
   border-radius: 100px 100px 0 0;
