--- a/assets/stylesheets/desktop.css
+++ b/assets/stylesheets/desktop.css
@@ -80,26 +80,50 @@
   main {
     #sectionTrending {
       > div {
+        &:nth-of-type(1) {
+          width: 50%;
+        }
+        &:nth-of-type(2) {
+          width: 50%;
+          display: flex;
+          justify-content: right;
+          margin-top: 20px;
+          > div {
+            > a {
+              padding: 10px 30px;
+              color: white;
+              background-color: #ee626b;
+              width: 137px;
+              height: 50px;
+              border-radius: 25px;
+              transition: 0.4s ease-in-out;
+              margin-top: 50px;
+              &:hover {
+                background-color: #1b7ffa;
+              }
+            }
+          }
+        }
         &:nth-of-type(3) {
           > div {
             /*--------------- card1 -----------*/
             &:nth-of-type(1) {
-              width: 22%;
+              width: 24%;
               height: 290px;
             }
             /*--------------- card2 -----------*/
             &:nth-of-type(2) {
-              width: 22%;
+              width: 24%;
               height: 290px;
             }
             /*--------------- card3 -----------*/
             &:nth-of-type(3) {
-              width: 22%;
+              width: 24%;
               height: 290px;
             }
             /*--------------- card4 -----------*/
             &:nth-of-type(4) {
-              width: 22%;
+              width: 24%;
               height: 290px;
             }
           }
